log/build_2025-06-11_18-20-33/branchforge/stderr.log
qmldir file not found at "/usr/lib/x86_64-linux-gnu/qt6/qml/QtQml"
qmldir file not found at "/usr/lib/x86_64-linux-gnu/qt6/qml/QtQml"
qmldir file not found at "/usr/lib/x86_64-linux-gnu/qt6/qml/QtQml"
In file included from /home/dingo/Programming/BranchForge/src/nodes/AdvancedNodeSystem.cpp:1:
/home/dingo/Programming/BranchForge/include/nodes/AdvancedNodeSystem.h: In constructor ‘BranchForge::Nodes::AdvancedNodeInstance::AdvancedNodeInstance(const BranchForge::Nodes::AdvancedNodeTemplate&, QObject*)’:
/home/dingo/Programming/BranchForge/include/nodes/AdvancedNodeSystem.h:193:26: warning: ‘BranchForge::Nodes::AdvancedNodeInstance::m_template’ will be initialized after [-Wreorder]
  193 |     AdvancedNodeTemplate m_template;
      |                          ^~~~~~~~~~
/home/dingo/Programming/BranchForge/include/nodes/AdvancedNodeSystem.h:190:13: warning:   ‘QString BranchForge::Nodes::AdvancedNodeInstance::m_id’ [-Wreorder]
  190 |     QString m_id;
      |             ^~~~
/home/dingo/Programming/BranchForge/src/nodes/AdvancedNodeSystem.cpp:306:1: warning:   when initialized here [-Wreorder]
  306 | AdvancedNodeInstance::AdvancedNodeInstance(const AdvancedNodeTemplate& template_, QObject* parent)
      | ^~~~~~~~~~~~~~~~~~~~
/home/dingo/Programming/BranchForge/src/ros2/ROS2TopicBrowser.cpp: In lambda function:
/home/dingo/Programming/BranchForge/src/ros2/ROS2TopicBrowser.cpp:283:34: error: invalid use of incomplete type ‘class QClipboard’
  283 |         QApplication::clipboard()->setText(topicName);
      |                                  ^~
In file included from /usr/include/x86_64-linux-gnu/qt6/QtWidgets/qwidget.h:8,
                 from /usr/include/x86_64-linux-gnu/qt6/QtWidgets/QWidget:1,
                 from /home/dingo/Programming/BranchForge/include/ros2/ROS2TopicBrowser.h:3,
                 from /home/dingo/Programming/BranchForge/src/ros2/ROS2TopicBrowser.cpp:1:
/usr/include/x86_64-linux-gnu/qt6/QtGui/qwindowdefs.h:42:7: note: forward declaration of ‘class QClipboard’
   42 | class QClipboard;
      |       ^~~~~~~~~~
gmake[2]: *** [CMakeFiles/branchforge_enhanced.dir/build.make:146: CMakeFiles/branchforge_enhanced.dir/src/ros2/ROS2TopicBrowser.cpp.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:88: CMakeFiles/branchforge_enhanced.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2
